# jamer

./: .baw  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README  pyproject.toml  requirements.dev  requirements.txt  setup.py
.baw/: project.cfg  project.config
.github/workflows/: release.yml  test.yml
docs/: index.rst
docs/releases/: 0.1.0.rst  0.2.0.rst  releases.rst
jam/: __init__.py  __main__.py  cat.py  freestyle.py  pdf.py  script.py
jam/cli/: __init__.py  operation.py
jamer/: __init__.py  __main__.py  freestyle.py  pdf.py  script.py
jamer/cli/: __init__.py  operation.py
pdfsmall/: __init__.py  cli.py  optimize.py
tests/: __init__.py  conftest.py  test_cat.py  test_cli.py  test_freestyle.py  test_pdf.py  test_script.py  test_select.py
tests/example/: simplechange.py  simpledelete.py  simpleselect.pys
tests/pdfsmall_/: __init__.py  test_optimize.py
tests/resources/: .gitignore  __init__.py  update.py
