[build-system]
requires = [
    "setuptools>=82.0.1",
    "wheel>=0.46.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "jamer"
version = "0.5.4"
description = ""
readme = {file = "README", content-type = "text/markdown"}
requires-python = ">=3.12"
authors = [
  {name = "Helmut Konrad Schewe", email = "helmutus@outlook.com"}
]

dependencies = [
    "utilo>=2.107.3,<3.0.0",
    "PyPDF2>=2.11.1,<3.0.0",
]

# Optional but recommended metadata
keywords = []
classifiers = [
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
]
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
jamer = "jamer.cli:main"
pdfcat = "jamer.cat:main"
pdfsmall = "pdfsmall.cli:main"

[project.optional-dependencies]
dev = [
    "utilotest>=1.0.1,<2.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    # power==2.20.1
]

[project.urls]
Homepage = "https://github.com/anaticulae/jamer"
Repository = "https://github.com/anaticulae/jamer"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"
[tool.semantic_release.changelog]
mode = "init"
output_format = "md"
[tool.semantic_release.commit_parser_options]
# allways generate a new version
patch_tags = ["fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test", "deps"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "jamer",
    "jamer.cli",
    "pdfsmall",
]
exclude = [
    "tests*",
]
